--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,7 +1,11 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
+.about-us {
+  background-color: #E4F5F5;//#F3F0EC;
+  border: 2px solid #E4F5F5;
+  border-radius: 15px;
+}
 .col-centered{
   float: none;
   margin: 0 auto;
