--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -2,8 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .about-us {
-  background-color: #E4F5F5;//#F3F0EC;
-  border: 2px solid #E4F5F5;
+  background-color: #F8F8F8;//#F3F0EC;
+  border: 2px solid #F8F8F8;
   border-radius: 15px;
 }
 .col-centered{
