--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -12,50 +12,36 @@
 
   <!-- Render the dropdown to provide filtering and sorting functionality-->
   <div class="dropdown">
-    <a id="dLabel" role="button" data-toggle="dropdown" class="btn btn-primary" data-target="#" href="/page.html">
-        Dropdown <span class="caret"></span>
+    <a id="dLabel" role="button" data-toggle="dropdown" class="btn btn-default" data-target="#" href="/page.html">
+        Filter/Sort <span class="caret"></span>
     </a>
+
     <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
-      <li><a href="#">Some action</a></li>
-      <li><a href="#">Some other action</a></li>
+      Filter by date
+      <div class="input-group date" style="width: 200px;" align="right">
+        <input type="text" class="form-control" disabled><span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
+      </div>
+      <li><%= link_to 'Sort by posted_at', home_users_path(sort: true) %></li>
+      <li><%= link_to 'Sort by favorites', home_users_path(fav: true) %></li>
       <li class="divider"></li>
       <li class="dropdown-submenu">
-        <a tabindex="-1" href="#">Hover me for more options</a>
+        <a tabindex="-1" href="#">Filter by source</a>
+
         <ul class="dropdown-menu">
-          <li><a tabindex="-1" href="#">Second level</a></li>
-          <li class="dropdown-submenu">
+          <% Image::TARGET_SITES_DISPLAY.each_with_index do |site, count| %>
+            <li><%= link_to "#{site}", home_users_path(site: Image::TARGET_SITES[count]) %></li>
+          <% end %>
+          <!--<li class="dropdown-submenu">
             <a href="#">Even More..</a>
             <ul class="dropdown-menu">
                 <li><a href="#">3rd level</a></li>
               <li><a href="#">3rd level</a></li>
             </ul>
-          </li>
-          <li><a href="#">Second level</a></li>
-          <li><a href="#">Second level</a></li>
+          </li>-->
         </ul>
       </li>
     </ul>
   </div>
-  <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
-    Filter by date
-    <div class="input-group date" style="width: 200px;" align="right">
-      <input type="text" class="form-control" disabled><span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
-    </div>
-    <li role="presentation" class="divider"></li>
-    <li><%= link_to 'Sort by posted_at', home_users_path(sort: true) %></li>
-    <li><%= link_to 'No nicoseiga(test)', home_users_path(nico: true) %></li>
-    <li><%= link_to 'Sort by favorites', home_users_path(fav: true) %></li>
-    <li class="dropdown-submenu">
-        <a tabindex="-1" href="#">Hover me for more options</a>
-        <ul class="dropdown-menu">
-          <li><a tabindex="-1" href="#">Second level</a></li>
-        </ul>
-    </li>
-  </ul>
-    <%# end %>
-
-  <%= "  #{get_debug_html(@images_all)}".html_safe if @images_all %>
-</p>
 
 <!-- image rendering starts from here -->
 <%= render partial: 'users/home_images', locals: { images: @images } %>
