--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -9,7 +9,7 @@
 <!-- Render images and the dropdown for filtering them -->
 <p>
   <%= "You don't seem to follow any tags yet. Let\'s follow them at the Preferences page! <br /><i>Showing recently created images:</i>".html_safe if current_user.tags.count == 0 %>
-</p>
+
 
   <!-- Render the dropdown to provide filtering and sorting functionality-->
   <div class="dropdown">
@@ -42,7 +42,10 @@
         </ul>
       </li>
     </ul>
+    <%= "  #{get_debug_html(@images_all)}".html_safe if @images_all %>
   </div>
+
+</p>
   <br />
 
 <!-- image rendering starts from here -->
