#259 Enable searching tags using target_words

--- a/app/views/users/preferences.html.erb
+++ b/app/views/users/preferences.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag 'users' %>
 
 <div class="container-fluid">
-  <div class="col-md-12">
+  <div class="col-md-8">
   <h2>Preferences</h2>
   <div class="col-md-4">Search a tag to follow!</div>
   <br />
@@ -17,6 +17,13 @@
     </div>
   <% end %>
   <br />
+
+  <!-- Render a dropdown to switch popular tags source -->
+  <%= bs_dropdown_button_to list_glyphicon do %>
+    <li><%= link_to 'Tags used for crawling', { controller: 'users', action: 'preferences', target_words: true }, class: 'btn-default' %></li>
+    <li><%= link_to 'All tags', { controller: 'users', action: 'preferences' }, class: 'btn-default' %></li>
+  <% end %>
+  <br /><br />
 
 
   <!-- Render popular tags or search result in the partial -->
