#258 Add styles to about us page

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -92,6 +92,13 @@ span.glyphicon {
   border-color: #C3C3C3;
   overflow-y: scroll;
 }
+.tag-button {
+  color: #FFF;
+  background-color: #7ACECE;
+}
+.tag-button a:visited {
+  color: #FFF;
+}
 
 
 .dropdown-submenu {
