--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -5,6 +5,7 @@
   background-color: #F8F8F8;//#F3F0EC;
   border: 2px solid #F8F8F8;
   border-radius: 15px;
+  margin: 10px;
 }
 .col-centered{
   float: none;
