--- a/app/views/notifications_mailer/new.html.erb
+++ b/app/views/notifications_mailer/new.html.erb
@@ -1,20 +1,18 @@
 <div class="container-fluid">
-  <div class="col-md-4 about-us">
-    <br />
-    <%= render partial: 'shared/about_us' %>
-    blog: ispick.tumblr.com<br />
-    twitter: @ispic6
-    <br />
-    <br />
+  <div class="row-fluid">
+    <div class="col-md-4 about-us">
+      <br />
+      <h2>About us</h2>
+      <%= render partial: 'shared/about_us' %>
+      blog: ispick.tumblr.com<br />
+      twitter: @ispic6
+      <br />
+      <br />
   </div>
-  <br />
-</div>
-<br />
-<br />
-<div class="container-fluid">
+
   <div class="col-md-4 about-us">
     <br />
-    <p><strong>Contact us</strong></p>
+    <h2>Contact us</h2>
 
     <%= bootstrap_form_for @message, :url => create_contact_path do |form| %>
       <fieldset class="fields">
@@ -39,9 +37,9 @@
       </fieldset>
     <% end %>
     <br />
-    s<br />
+    <br />
   </div>
-
+</div>
 </div>
 <br />
   <br />
