--- a/app/views/shared/_about_us.html.erb
+++ b/app/views/shared/_about_us.html.erb
@@ -5,6 +5,6 @@ Ispick is an automatic anime artworks aggregator.<br />
     However, over the long term we believe we can help you more by providing our automated system, as Google did years ago. For now it only supports image search by limited text tags, but we're planning to implement image search based on image, using deep neural networks.
   Our goal is "Letting people see anime artworks they like automatically", and our mission is "To solve problems and improve the world by intelligent, automated systems".<br />
   <br />
-    Since we are at the very first stage and the system need to be adjusted or changed a lot, we've decided that we continue improving this site with your feedbacks.<br />
+    Since we are at the very first stage and the system need to be adjusted or changed a lot, it would be realy great and helpful if we could have your feedbacks. Bugs, thoughts, opinions...anything related this website is welcomed.<br />
   So please feel free to send us yours! Thank you for reading this.<br />
   <br />
