--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -1,4 +1,12 @@
-.modal { position: absolute; }
+body {
+&.modal-open { position:fixed; overflow:hidden;
+    .modal { overflow: scroll;
+        @media only screen and (min-resolution:150dpi) and (max-width: @screen-sm),
+            only screen and (-webkit-min-device-pixel-ratio:1.5) {
+            overflow: scroll; -webkit-overflow-scrolling: touch;
+        }
+    }
+}
 
 // 配信画像のモーダル表示時の背景色
 .modal-backdrop {
