--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,17 +1,21 @@
-<h2>パスワードをお忘れの方</h2>
-<p>パスワードのリセット方法を、ご登録メールアドレスへお送りします。</p>
+<div class="container">
+  <div class="col-md-6">
+    <h2>Forgot your password?</h2>
 
-<div class="btn-group-oauth">
-  <%= bootstrap_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-    <%= devise_error_messages! %>
-    <%= f.email_field :email, autofocus: true, placeholder: 'メールアドレス'  %>
-    <%= f.submit '送信' %>
-  <% end %>
+    <div class="btn-group-oauth">
+      <%= bootstrap_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= devise_error_messages! %>
+        <%= f.email_field :email, autofocus: true, placeholder: 'email address'  %>
+        <%= f.submit 'Send' %>
+      <% end %>
 
-  <br>
-  <div align="left">
-    <%= link_to '既にアカウントをお持ちの方はこちら', '/signin_with_password' %><br>
-    <%= link_to 'はじめて方はこちら', '/signup_with_password' %>
+      <br>
+      <div align="left">
+        <%= link_to 'Sign in', '/signin_with_password' %> /
+        <%= link_to 'Sign up', '/signup_with_password' %>
+      </div>
+    </div>
+
   </div>
 </div>
 
