--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,21 @@
+<div class="container">
+  <div class="col-md-6">
+    <h2>Create an account via email</h2>
+    <div class="btn-group-oauth">
+      <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
 
+        <%= f.text_field :name, autofocus: true %>
+        <%= f.email_field :email %>
+        <%= f.password_field :password, autocomplete: "off" %>
+        <%= f.password_field :password_confirmation, autocomplete: "off" %>
 
-<div class="btn-group-oauth">
-  <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= devise_error_messages! %>
+        <%= f.submit 'Create an account' %>
+      <% end %>
 
-    <%= f.text_field :name, autofocus: true %>
-    <%= f.email_field :email %>
-    <%= f.password_field :password, autocomplete: "off" %>
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-
-    <%= f.submit 'アカウントを作成' %>
-  <% end %>
-
-  <br>
-  <br>
-  <%= link_to '既にアカウントをお持ちの方はこちら', '/signin_with_password' %>
+      <br>
+      <br>
+      <%= link_to 'Sign in', '/signin_with_password' %>
+    </div>
+  </div>
 </div>
