#301 Fix a link in the forgot_password template

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -12,7 +12,7 @@
       <br>
       <div align="left">
         <%= link_to 'Sign in', '/signin_with_password' %> /
-        <%= link_to 'Sign up', '/signup_with_password' %>
+        <%= link_to 'Sign up', '/signup' %>
       </div>
     </div>
 
