--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -14,7 +14,11 @@
   // TODO: hard codingを解消する
   position: fixed;
   top: 3%;
-  left: -68.2%;//-56.7%;
+  left: -68.2%;
+}
+.modal.modal-images {
+  overflow-y: scroll; /* has to be scroll, not auto */
+  -webkit-overflow-scrolling: touch;
 }
 
 
