#336 Make the close buttons on clip modals work

--- a/app/views/image_boards/_boards.js.erb
+++ b/app/views/image_boards/_boards.js.erb
@@ -1,21 +1,3 @@
-//= require 'modal_boards'
-//= require 'component'
-
-// NEW
-$(".modal-boards .modal-body").html("<%= escape_javascript(
+$("#modal-board-body").html("<%= escape_javascript(
   render partial: 'shared/form_board', locals: { image: @image, image_board: @board, html: @id }) %>");
 $("#modal-board").modal('show');
-var component = new Component();
-component.initModals();
-
-// OLD
-/*console.log('AJAXing: '+"<%= @id %>");
-selector = "#" + "<%= @id.to_s %>";
-console.log(selector);
-
-$(selector).popover('destroy');
-$(selector).popover({
-  html: true,
-  content: "<%= escape_javascript(render partial: 'shared/popover_board', locals: { image: @image, image_board: @board, html: @id }) %>",
-  container: 'body'
-}).popover('show');*/
