--- a/app/views/shared/_modal_board.html.erb
+++ b/app/views/shared/_modal_board.html.erb
@@ -1,8 +1,7 @@
-<div class="modal modal-boards" id="modal-board" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
+<div class="modal modal-boards" id="modal-board" tabindex="-1" role="dialog" aria-labelledby="modal_show_clip_form" aria-hidden="true" >
   <div class="modal-dialog">
     <div class="modal-content">
-      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-      <div class="modal-body">
+      <div id="modal-board-body" class="modal-body">
         <!-- render shared/_modal_board.html.erb from .js.erb here -->
       </div>
     </div>
