--- a/app/views/shared/_modal_image.html.erb
+++ b/app/views/shared/_modal_image.html.erb
@@ -1,10 +1,10 @@
-<div class="modal modal-images" id="modal-image" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
+<div class="modal modal-images" id="modal-image" tabindex="-1" role="dialog" aria-labelledby="modal_show_image_detail" aria-hidden="true" >
   <div class="modal-dialog">
     <div class="modal-content">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       <br />
-      <!-- javascriptからpartial templateをbodyに描画する -->
-      <div id="modal-image-body" class="modal-body modal-image" style="word-wrap: break-word;">
+      <div id="modal-image-body" class="modal-body" style="word-wrap: break-word;">
+        <!-- render shared/_show_image.html.erb from .js.erb here -->
       </div>
     </div>
   </div>
