#336 Show debug buttons only in development env

--- a/app/views/users/_home_images.html.erb
+++ b/app/views/users/_home_images.html.erb
@@ -9,7 +9,7 @@
         <%= button_group class: 'pull-right blocks' do %>
           <%= render_clip_button(image) %>
           <%= render_show_button(image) %>
-          <%= render_show_debug_button(image) %>
+          <%= render_show_debug_button(image) if Rails.env.development? %>
         <% end %>
         <br />
       </div>
