#336 Fix the button in boards.html

--- a/app/views/users/boards.html.erb
+++ b/app/views/users/boards.html.erb
@@ -28,7 +28,7 @@
       <div class="titleBox">
         <%= button_group class: 'pull-right blocks' do %>
           <%= render_unclip_button(favored_image) %>
-          <%= render_show_button(favored_image) %>
+          <%= render_show_favored_button(favored_image) %>
         <% end %>
         <br />
       </div>
