--- a/app/views/favored_images/_show.js.erb
+++ b/app/views/favored_images/_show.js.erb
@@ -1,3 +1,3 @@
 // Render the _favored_image.html template on a modal
-$(".modal-image.modal-body").html("<%= escape_javascript(render @favored_image) %>");
+$("#modal-image-body").html("<%= escape_javascript(render @favored_image) %>");
 $("#modal-image").modal('show');
