#337 Install bootstrap-social css file

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,8 @@
  *= require welcome
  *= require bootstrap-datepicker3
  *= require rails_bootstrap_forms
+ *= require bootstrap-social
+ *= require font-awesome
  *
  */
 
