--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -21,12 +21,11 @@ pre {
 a {
   color: #000;
   text-decoration: none;
-  &:visited {
+  /*&:visited {
     color: #666;
-  }
+  }*/
   &:hover {
     color: #000;
-    //background-color: #fff;
     text-decoration: underline;
   }
 }
