--- a/app/views/shared/_show_image.html.erb
+++ b/app/views/shared/_show_image.html.erb
@@ -4,8 +4,10 @@
 <div class="image-title">
   <%= strip_tags(image.title) %>
 </div>
-<%= render_clip_button(image, 'btn') %>
-<%= render_like_button(image, 'btn') %>
+<div class="image-buttons">
+  <%= render_clip_button(image, 'btn') %>
+</div>
+<%# render_like_button(image, 'btn') %>
 <hr>
 
 <div class="image-detail">
