#341 Improve styles of the header

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,9 +1,11 @@
 body {
-  background-color: #fff;
+  background-color: #FDFCFB;//#F3F0EC;//#fff;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+
+  height: auto;
 }
 
 p, ol, ul, td {
