--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,32 +1,51 @@
 <%= render 'shared/modal_avatar' %>
 
-<nav class="navbar navbar-default" role="navigation">
-  <%= navbar_header brand: image_tag(asset_path('test_logo.png')), brand_link: home_users_path, class: 'logo' %>
-  <%= navbar_collapse do %>
-    <%= navbar_group class: 'User', id: 'menu' do %>
-      <%= navbar_dropdown 'User' do %>
-        <li>
-          <%= link_to 'Change avatar image', new_avatar_users_path, { :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window', class: 'dropdown-user' } %>
-        </li>
-        <%= navbar_item 'Settings', settings_users_path %>
-        <%= navbar_dropdown_divider %>
-        <%= navbar_item 'Log out', destroy_user_session_path %>
-      <% end %>
 
-      <%= navbar_item 'Home', home_users_path %>
-      <%= navbar_item 'Boards', boards_users_path %>
-      <%= navbar_item 'Preferences', preferences_users_path %>
-      <%# navbar_item 'About us', new_contact_path %>
-      <%= navbar_dropdown 'About' do %>
-      <%= navbar_item 'About us', new_contact_path %>
-      <%= navbar_item 'Blog', 'http://ispick.tumblr.com/'.html_safe %>
-      <%= navbar_item 'FAQ', page_path('faq') %>
-      <% end %>
+<nav class="navbar navbar-ispick" role="navigation">
+  <!-- Render logo image in navbar's "brand" area -->
+  <%# navbar_header brand: image_tag(asset_path('ispick_logo.png'), class: 'logo'), brand_link: home_users_path %>
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+    </button>
+    <%= link_to image_tag(asset_path('ispick_logo_half0.png'), class: 'logo'), home_users_path %>
+  </div>
+
+
+  <%= navbar_collapse do %>
+    <%= navbar_group class: 'collapse-header', id: 'menu' do %>
+
+      <!-- To add "collapse-item" to all navbar items, this block is written in raw html -->
+      <%# navbar_dropdown 'User', class: 'collapse-item' do %>
+      <li class="dropdown collapse-item">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">User<span class="caret"></span></a>
+        <ul class="dropdown-menu" role="menu">
+          <li>
+            <%= link_to 'Change avatar image', new_avatar_users_path, { :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window', class: 'dropdown-user' } %>
+          </li>
+          <%= navbar_item 'Settings', settings_users_path %>
+          <%= navbar_dropdown_divider %>
+          <%= navbar_item 'Log out', destroy_user_session_path %>
+        </ul>
+      </li>
+
+      <!-- Other items is rendered by helper methods as usual -->
+      <%= navbar_item 'Home', home_users_path, class: 'collapse-item' %>
+      <%= navbar_item 'Boards', boards_users_path, class: 'collapse-item' %>
+      <%= navbar_item 'Preferences', preferences_users_path, class: 'collapse-item' %>
+      <%= navbar_item 'About us', new_contact_path, class: 'collapse-item' %>
+
     <% end %>
 
+    <!-- Render user's info. Disabled until we have better style -->
+<!--
     <div style="text-align:right;">
-      <%= "Hi, #{current_user.name}!" %>
-      <%= image_tag(current_user.avatar.url(:thumb), class: 'current-avatar') %>
+      <%# "Hi, #{current_user.name}!" %>
+      <%# image_tag(current_user.avatar.url(:thumb), class: 'current-avatar') %>
     </div>
+-->
   <% end %>
 </nav>
