--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -23,10 +23,12 @@
       <li class="dropdown collapse-item">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">User<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
-          <li>
-            <%= link_to 'Change avatar image', new_avatar_users_path, { :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window', class: 'dropdown-user' } %>
-          </li>
+          <%= navbar_item 'Boards', boards_users_path, class: 'collapse-item' %>
+          <!--<li>
+            <%# link_to 'Change avatar image', new_avatar_users_path, { :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window', class: 'dropdown-user' } %>
+          </li>-->
           <%= navbar_item 'Settings', settings_users_path %>
+
           <%= navbar_dropdown_divider %>
           <%= navbar_item 'Log out', destroy_user_session_path %>
         </ul>
@@ -34,8 +36,8 @@
 
       <!-- Other items is rendered by helper methods as usual -->
       <%= navbar_item 'Home', home_users_path, class: 'collapse-item' %>
-      <%= navbar_item 'Boards', boards_users_path, class: 'collapse-item' %>
-      <%= navbar_item 'Preferences', preferences_users_path, class: 'collapse-item' %>
+      <%= navbar_item 'RSS', rss_users_path, class: 'collapse-item' %>
+      <%= navbar_item 'Tags', preferences_users_path, class: 'collapse-item' %>
       <%= navbar_item 'About us', new_contact_path, class: 'collapse-item' %>
 
     <% end %>
