#341 Fix about us page

--- a/app/views/notifications_mailer/new.html.erb
+++ b/app/views/notifications_mailer/new.html.erb
@@ -4,8 +4,8 @@
       <br />
       <h2>About us</h2>
       <%= render partial: 'shared/about_us' %>
-      blog: ispick.tumblr.com<br />
-      twitter: @ispic6
+      blog: <%= link_to 'ispick.tumblr.com', 'http://ispick.tumblr.com'.html_safe %><br />
+      twitter: <%= link_to '@ispic6', 'https://twitter.com/Ispic6'.html_safe %>
       <br />
       <br />
   </div>
