#343 Include an image list file in the zip file

--- a/app/views/debug/index.html.erb
+++ b/app/views/debug/index.html.erb
@@ -9,6 +9,7 @@ and this page would be used as the alternative in production.<br />
   <%= bs_button_to 'Debug illust_detection', illust_detection_debug_path, class: 'btn-default' %>
   <%= bs_button_to 'Debug crawling', crawling_debug_path, class: 'btn-default' %>
   <%= bs_button_to 'Download images', download_debug_path, class: 'btn-default' %>
+  <%= bs_button_to 'Download recent images', download_recent_path, class: 'btn-default' %>
   <%= bs_button_to 'Toggle miniprofiler', miniprofiler_debug_path, class: 'btn-default' %>
   <%= bs_button_to 'Top page', '/', class: 'btn-default' %>
   <%= bs_button_to 'Tutorial', '/tutorial', class: 'btn-default' %>
