--- a/app/views/users/rss.html.erb
+++ b/app/views/users/rss.html.erb
@@ -13,7 +13,7 @@
       <li><%= link_to "#{site}", rss_users_path(site: Image::TARGET_SITES[count]) %></li>
     <% end %>
   <% end %>
-
+  <%= "  #{get_debug_html(@images_all)}".html_safe if @images_all %>
 </p>
   <br />
 
