--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -42,6 +42,20 @@
 
     <% end %>
 
+
+    <%= search_form_for @search, url: search_users_path, html: { method: :post, class: "custom-search-form navbar-form navbar-left collapse-item", role: 'search' } do |f| %>
+    <%# bootstrap_form_for @search, url: search_users_path, html: { method: :post, class: "navbar-form navbar-left" }, remote: true do |f| %>
+    <div class="input-group">
+
+      <%= f.text_field :tags_name_cont, class: "form-control", placeholder: "Search"  %>
+
+        <%# f.submit search_glyphicon, class: "btn btn-default" %>
+      <span class="input-group-btn">
+      <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+
+    </div></div>
+  <% end %>
+
     <!-- Render user's info. Disabled until we have better style -->
 <!--
     <div style="text-align:right;">
