--- a/app/views/debug/index.html.erb
+++ b/app/views/debug/index.html.erb
@@ -10,6 +10,7 @@ and this page would be used as the alternative in production.<br />
   <%= bs_button_to 'Debug crawling', crawling_debug_path, class: 'btn-default' %>
   <%= bs_button_to 'Download images', download_debug_path, class: 'btn-default' %>
   <%= bs_button_to 'Download recent images', download_recent_path, class: 'btn-default' %>
+  <%= bs_button_to 'Download csv file', download_csv_path, class: 'btn-default' %>
   <%= bs_button_to 'Toggle miniprofiler', miniprofiler_debug_path, class: 'btn-default' %>
   <%= bs_button_to 'Top page', '/', class: 'btn-default' %>
   <%= bs_button_to 'Tutorial', '/tutorial', class: 'btn-default' %>
