--- a/app/views/users/preferences.html.erb
+++ b/app/views/users/preferences.html.erb
@@ -7,7 +7,7 @@
   <br />
 
   <!-- Render the search form -->
-  <%= search_form_for @search, url: preferences_users_path, html: { method: :post }, remote: true do |f| %>
+  <%= search_form_for @search_tags, url: preferences_users_path, html: { method: :post }, remote: true do |f| %>
     <div class="col-md-4">
       <%= f.text_field :name_cont, class: "form-control" %>
     </div>
