#350 Get the count of a relation inside an action

--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -40,7 +40,7 @@
         </ul>
       </li>
     </ul>
-    <%= "  #{get_debug_html(@images_all)}".html_safe if @images_all %>
+    <%= "  #{get_debug_html(@count)}".html_safe if @count %>
   </div>
 
 </p>
