#353 Fix view templates

--- a/app/views/debug/_show_image.html.erb
+++ b/app/views/debug/_show_image.html.erb
@@ -10,8 +10,8 @@
 </p>
 
 <p>
-  <strong>ImageNet categories:</strong>
-  <%# image.feature.categ_imagenet if image.feature %>
+  <strong>ConvNet feature vectors:</strong>
+  <%= image.feature.convnet_feature if image.feature %>
 </p>
 
 <h2>Detail:</h2>
