--- a/app/views/debug/_show_image_debug.js.erb
+++ b/app/views/debug/_show_image_debug.js.erb
@@ -1,2 +1,2 @@
-$(".modal-image.modal-body").html("<%= escape_javascript(render partial: 'debug/show_image', locals: { image: @image }) %>");
+$("#modal-image .modal-body").html("<%= escape_javascript(render partial: 'debug/show_image', locals: { image: @image }) %>");
 $("#modal-image").modal('show');
