--- a/app/views/debug/_show_target_images.html.erb
+++ b/app/views/debug/_show_target_images.html.erb
@@ -1,4 +1,4 @@
-<h1>登録イラスト一覧</h1>
+<h1>Your target images</h1>
 <%= link_to 'New Target image', new_target_image_path %>
 <br>
 
@@ -11,7 +11,7 @@
         <%= link_to 'Prefer', prefer_target_image_path(target_image) %>
         <%= link_to 'Edit', edit_target_image_path(target_image) %>
         <%= link_to 'Destroy', target_image, method: :delete, data: { confirm: 'Are you sure?' } %>
-        <%= link_to(image_tag(target_image.data.url), { controller: 'target_images', action: 'show', id: target_image.id.to_s }) %>
+        <%= link_to(image_tag(target_image.data.url(:thumb)), { controller: 'target_images', action: 'show', id: target_image.id.to_s }) %>
         <div class="titleBox"><%= target_image.data.content_type %></div>
       </div>
     </div>
