--- a/app/views/target_images/index.html.erb
+++ b/app/views/target_images/index.html.erb
@@ -6,10 +6,11 @@
   <div class="box">
     <div class="boxInner">
       <%= link_to 'Show', target_image %>
-      <%= link_to 'Prefer', prefer_target_image_path(target_image) %>
+      <%= link_to 'Similar', prefer_target_image_path(target_image) %>
+      <%= link_to 'Similar ConvNet', similar_convnet_target_image_path(target_image) %>
       <%= link_to 'Edit', edit_target_image_path(target_image) %>
       <%= link_to 'Destroy', target_image, method: :delete, data: { confirm: 'Are you sure?' } %>
-      <%= link_to(image_tag(target_image.data.url), { controller: 'target_images', action: 'show', id: target_image.id.to_s }) %>
+      <%= link_to(image_tag(target_image.data.url(:thumb)), { controller: 'target_images', action: 'show', id: target_image.id.to_s }) %>
       <div class="titleBox"><%= target_image.data.content_type %></div>
     </div>
   </div>
