#353 Fix view codes

--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -38,8 +38,10 @@ ul.boxline li {
 ul.boxline li img {
     display: block!important;
     border: 1px solid #d0a600!important;
-    height: 55px!important;
-    width: 72px!important;
+    //height: 55px!important;
+    //width: 72px!important;
+    height: 200px!important;
+    width: 200px!important;
     margin: 2px!important;
     padding: 2px!important;
 }
