--- a/app/views/debug/_show_target_images.html.erb
+++ b/app/views/debug/_show_target_images.html.erb
@@ -7,8 +7,8 @@
     <div class="box">
       <div class="boxInner">
         <%= link_to 'Show', target_image %>
-        <td><%= link_to 'ShowDelivered', show_delivered_target_image_path(target_image) %></td>
-        <%= link_to 'Prefer', prefer_target_image_path(target_image) %>
+        <%= link_to 'Similar', prefer_target_image_path(target_image) %>
+        <%= link_to 'Similar ConvNet', similar_convnet_target_image_path(target_image) %>
         <%= link_to 'Edit', edit_target_image_path(target_image) %>
         <%= link_to 'Destroy', target_image, method: :delete, data: { confirm: 'Are you sure?' } %>
         <%= link_to(image_tag(target_image.data.url(:thumb)), { controller: 'target_images', action: 'show', id: target_image.id.to_s }) %>
