--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -16,10 +16,10 @@
     </a>
 
     <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
-      Filter by date
+      <!--Filter by date
       <div class="input-group date" style="width: 200px;" align="right">
         <input type="text" class="form-control" disabled><span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
-      </div>
+      </div>-->
       <li><%= link_to 'Sort by posted_at', home_users_path(sort: true) %></li>
       <li><%= link_to 'Sort by favorites', home_users_path(fav: true) %></li>
       <li class="divider"></li>
