--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,6 @@
 
 <nav class="navbar navbar-ispick" role="navigation">
   <!-- Render logo image in navbar's "brand" area -->
-  <%# navbar_header brand: image_tag(asset_path('ispick_logo.png'), class: 'logo'), brand_link: home_users_path %>
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
@@ -19,16 +18,11 @@
     <%= navbar_group class: 'collapse-header', id: 'menu' do %>
 
       <!-- To add "collapse-item" to all navbar items, this block is written in raw html -->
-      <%# navbar_dropdown 'User', class: 'collapse-item' do %>
       <li class="dropdown collapse-item">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">User<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
           <%= navbar_item 'Boards', boards_users_path, class: 'collapse-item' %>
-          <!--<li>
-            <%# link_to 'Change avatar image', new_avatar_users_path, { :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window', class: 'dropdown-user' } %>
-          </li>-->
           <%= navbar_item 'Settings', settings_users_path %>
-
           <%= navbar_dropdown_divider %>
           <%= navbar_item 'Log out', destroy_user_session_path %>
         </ul>
@@ -43,25 +37,13 @@
     <% end %>
 
 
-    <%= search_form_for @search, url: search_users_path, html: { method: :post, class: "custom-search-form navbar-form navbar-left collapse-item", role: 'search' } do |f| %>
-    <%# bootstrap_form_for @search, url: search_users_path, html: { method: :post, class: "navbar-form navbar-left" }, remote: true do |f| %>
-    <div class="input-group">
-
-      <%= f.text_field :tags_name_cont, class: "form-control", placeholder: "Search"  %>
-
-        <%# f.submit search_glyphicon, class: "btn btn-default" %>
-      <span class="input-group-btn">
-      <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-
-    </div></div>
-  <% end %>
-
-    <!-- Render user's info. Disabled until we have better style -->
-<!--
-    <div style="text-align:right;">
-      <%# "Hi, #{current_user.name}!" %>
-      <%# image_tag(current_user.avatar.url(:thumb), class: 'current-avatar') %>
-    </div>
--->
+    <!-- Render Ransack search form -->
+    <%= search_form_for @search, url: search_users_path, html: { class: "custom-search-form navbar-form navbar-left collapse-item", role: 'search' } do |f| %>
+      <div class="input-group">
+        <%= f.text_field :tags_name_cont, class: "form-control", placeholder: "Search"  %>
+        <span class="input-group-btn">
+        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+      </div>
+    <% end %>
   <% end %>
 </nav>
