--- a/app/views/shared/_header_top.html.erb
+++ b/app/views/shared/_header_top.html.erb
@@ -1,6 +1,3 @@
-<%= render 'shared/modal_avatar' %>
-
-
 <nav class="navbar navbar-ispick" role="navigation">
   <!-- Render logo image in navbar's "brand" area -->
   <div class="navbar-header">
@@ -10,28 +7,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
     </button>
-    <%= link_to image_tag(asset_path('ispick_logo_half0.png'), class: 'logo'), home_users_path %>
+    <%= link_to image_tag(asset_path('ispick_logo_half0.png'), class: 'logo'), '/' %>
   </div>
 
 
   <%= navbar_collapse do %>
     <%= navbar_group class: 'collapse-header', id: 'menu' do %>
-
-      <!-- To add "collapse-item" to all navbar items, this block is written in raw html -->
-      <li class="dropdown collapse-item">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">User<span class="caret"></span></a>
-        <ul class="dropdown-menu" role="menu">
-          <%= navbar_item 'Boards', boards_users_path, class: 'collapse-item' %>
-          <%= navbar_item 'Settings', settings_users_path %>
-          <%= navbar_dropdown_divider %>
-          <%= navbar_item 'Log out', destroy_user_session_path %>
-        </ul>
-      </li>
-
       <!-- Other items is rendered by helper methods as usual -->
-      <%= navbar_item 'Home', home_users_path, class: 'collapse-item' %>
       <%= navbar_item 'RSS', rss_users_path, class: 'collapse-item' %>
-      <%= navbar_item 'Tags', preferences_users_path, class: 'collapse-item' %>
       <%= navbar_item 'About us', new_contact_path, class: 'collapse-item' %>
 
     <% end %>
