--- a/app/views/shared/_header_top.html.erb
+++ b/app/views/shared/_header_top.html.erb
@@ -15,15 +15,15 @@
     <%= navbar_group class: 'collapse-header', id: 'menu' do %>
       <!-- Other items is rendered by helper methods as usual -->
       <%= navbar_item 'RSS', rss_users_path, class: 'collapse-item' %>
+      <%= navbar_item 'Sign in', '/signin_with_password', class: 'collapse-item' %>
       <%= navbar_item 'About us', new_contact_path, class: 'collapse-item' %>
-
     <% end %>
 
 
     <!-- Render Ransack search form -->
     <%= search_form_for @search, url: search_images_path, html: { class: "custom-search-form navbar-form navbar-left collapse-item", role: 'search' } do |f| %>
       <div class="input-group">
-        <%= f.text_field :tags_name_cont, class: "form-control", placeholder: "Search"  %>
+        <%= f.text_field :tags_name_cont, class: "form-control", placeholder: "Search", "data-pre" => autocomplete_tags_path %>
         <span class="input-group-btn">
         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
       </div>
