--- a/app/views/users/_home_images.html.erb
+++ b/app/views/users/_home_images.html.erb
@@ -1,11 +1,11 @@
 <div class="wrapper">
   <% images.each_with_index do |image, index| %>
-    <!---->
 
     <div class="block has-gutters">
       <div class="height"><%= image.height %></div>
       <%= render_image(image) %>
 
+      <% if current_user %>
       <div class="titleBox">
         <div class="id"><%= image.id %></div>
         <%= button_group class: 'pull-right blocks' do %>
@@ -15,6 +15,7 @@
         <% end %>
         <br />
       </div>
+      <% end %>
 
       <!-- Add another anchor to the modal as it gets unclickable when thumbnail's height is to short -->
       <%= link_to ({ controller: 'images', action: 'show', id: image.id.to_s, remote: true, 'data-toggle' => "modal", 'data-target' => '#modal-image' }) do %>
