--- a/app/views/users/rss.html.erb
+++ b/app/views/users/rss.html.erb
@@ -10,10 +10,10 @@
   <!-- Render the dropdown to provide filtering and sorting functionality-->
   <%= bs_dropdown_button_to list_glyphicon do %>
     <% Image::TARGET_SITES_DISPLAY.each_with_index do |site, count| %>
-      <li><%= link_to "#{site}", rss_users_path(site: Image::TARGET_SITES[count]) %></li>
+      <li><%= link_to "#{site}", rss_users_path({ site: Image::TARGET_SITES[count], site_name: Image::TARGET_SITES_DISPLAY[count]}) %></li>
     <% end %>
   <% end %>
-  <%= "  #{get_debug_html(@count)}".html_safe if @count %>
+  <%= "#{@site}:  #{get_debug_html(@count)}".html_safe if @count %>
 </p>
   <br />
 
