--- a/app/assets/stylesheets/images_detail.css.scss
+++ b/app/assets/stylesheets/images_detail.css.scss
@@ -26,30 +26,12 @@
 }
 .share-button {
   float: right;
-  width: auto;
+  //width: auto;
   text-align: right;
   align: right;
 }
 
-/*DL, DT, DD TAGS LIST DATA*/
-/*dl {
-    margin-bottom:50px;
-}
 
-dl dt {
-    background:#5f9be3;
-    color:#fff;
-    float:left;
-    font-weight:bold;
-    margin-right:10px;
-    padding:5px;
-    width:100px;
-}
-
-dl dd {
-    margin:2px 0;
-    padding:5px 0;
-}*/
 dl {
   overflow: hidden;
   width: 700px;
